# syncrab

./: .gitignore  Cargo.toml  LICENSE  README.MD  install  uninstall  update
src/: consts.rs  lib.rs  main.rs  structs.rs  utils.rs
src/app/: app.rs  components.rs  mod.rs  structs.rs  tui.rs
src/app/helpers/: getters.rs  handle_events.rs  handle_record.rs  misc.rs  mod.rs
src/backup/: backup.rs
src/cron/: perform_backup.rs
src/db/: db.rs
src/watcher/: watcher.rs
